--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -5,6 +5,12 @@
 
 <h1>Counter</h1>
 
+<EditForm Model="this" FormName="formCalc">
+    <div>
+        <InputNumber @bind-Value="multiplicityCount"></InputNumber>
+    </div>
+</EditForm>
+
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
@@ -12,8 +18,16 @@
 @code {
     private int currentCount = 0;
 
+    [SupplyParameterFromForm]
+    public int multiplicityCount { get; set; }
+
     private void IncrementCount()
-    {
-        currentCount++;
+    {  
+         if (multiplicityCount != 0)
+            currentCount += multiplicityCount;
+            else
+            currentCount++;
     }
+
+    
 }
