--- a/Components/Controls/ServerComponent.razor
+++ b/Components/Controls/ServerComponent.razor
@@ -1,7 +1,23 @@
-﻿<p style="color: @(server.IsOnline?"green":"red")">
+﻿@if(server != null)
+{
+
+<p style="color: @(server.IsOnline?"green":"red")">
     @server.Name is in @server.City and is @(server.IsOnline?"online":"offline")
+    &nbsp;
+    <button type="button" class="btn btn-primary" @onclick="ChangeStatus">Turn on/off</button>
 </p>
 
+}
+
+
 @code {
-    private Server server = new Server { Name = "Server 1", City = "Toronto" };
+
+    private Server? server { get; set; } = new Server { Name = "Server 1", City = "Toronto" }; 
+
+    private void ChangeStatus()
+    {
+        if(server != null)
+        this.server.IsOnline = !this.server.IsOnline;
+    }
+
 }
